# SAT-Pol

./: .gitignore  README.md  README.org  SAT-Pol.cabal  package.yaml  stack.yaml
.stack-work/install/x86_64-osx/lts-8.22/8.0.2/doc/: doc-index.html  index.html
.stack-work/install/x86_64-osx/lts-8.22/8.0.2/flag-cache/: HaskellForMaths-0.4.8-8QcC8dcD7HF183G9RK8zU9  QuickCheck-2.9.2-LmiHRFRrRt53hwJNS0Ioz0  ansi-terminal-0.6.3.1-3RTqikoQf47ajVD9m8zgB  ansi-wl-pprint-0.6.7.3-A79v826bgPr574HtaZPPqC  binary-0.8.3.0-2pMP266HkYr163LicEzfmx  cmdargs-0.10.17-IWa8ygdJhnJBShkQXN8V9I  containers-0.5.10.2-BsNvjXoQS1iGZ9xbXaQ0Mz  haskeline-0.7.4.0-6Hq0O8CROR8yGaHAlnjIO  hatt-1.5.0.3-GWtyu7iSUZM8OxhcENGMFZ  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  parsec-3.1.11-9IAZGtMUT6wCsI3bLLj0sc  primitive-0.6.1.0-6AbSTw9JXz141LE5p6LGH  random-1.1-9tceXaeYIMZ4JrKq20Egog  terminfo-0.4.1.0-FNScbjwxa2Y3p4e5RvG3l  text-1.2.2.1-8uYQaaLw6sLC3yYp1cEXvy  tf-random-0.5-BGjMgO8m67W8CHiEl15kZ7
.stack-work/install/x86_64-osx/lts-8.22/8.0.2/pkgdb/: HaskellForMaths-0.4.8-8QcC8dcD7HF183G9RK8zU9.conf  QuickCheck-2.9.2-LmiHRFRrRt53hwJNS0Ioz0.conf  SAT-Pol-0.1.0.0-CfnMeGgalar5P7rViiH2gc.conf  package.cache  (+6 more)
docs/: Examples.html  PolAux.html  ReadingF.html  SAT-Pol.haddock  SAT-Pol.txt  Tool.html  ToolS.html  ToolSP.html  doc-index.html  index.html  mini_Examples.html  mini_ReadingF.html  mini_Tool.html  mini_ToolS.html  mini_ToolSP.html
docs/src/: Examples.html  Paths_SAT_Pol.html  PolAux.html  ReadingF.html  Tool.html  ToolS.html  ToolSP.html
src/: Examples.hs  PolAux.hs  ReadingF.hs  Tool.hs  ToolS.hs  ToolSP.hs
(+936 files in other folders)
