name:                SAT-Pol
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/SAT-Pol#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel R. Chavarria
maintainer:          drodriguez15@us.es
copyright:           2017 Author name here
category:            Tool
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PolAux
                     , Tool
                     , Examples
                     , ReadingF
  build-depends:       base >= 4.7 && < 5
                     , HaskellForMaths
                     , containers
                     , hatt
  default-language:    Haskell2010

-- executable SAT-Pol-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , SAT-Pol
--   default-language:    Haskell2010

-- test-suite SAT-Pol-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , SAT-Pol
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

-- source-repository head
--   type:     git
--   location: https://github.com/githubuser/SAT-Pol
